--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
-    "db:seed": "ts-node --project tsconfig.json prisma/seed.ts"
+    "db:seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
+  },
+  "prisma": {
+    "schema": "src/pages/schema.prisma"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
