--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   db:
     image: postgres:16
+    restart: unless-stopped
     environment:
       POSTGRES_USER: dais
       POSTGRES_PASSWORD: dais
@@ -16,7 +17,7 @@ services:
     build: .
     command: npm run dev
     ports:
-      - "3001:3001"
+      - "3991:3001"
     env_file:
       - .env.docker
     depends_on:
