--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   db:
     image: postgres:16
-    restart: unless-stopped
+    restart: "unless-stopped"
     environment:
       POSTGRES_USER: dais
       POSTGRES_PASSWORD: dais
