--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:16
@@ -16,6 +14,8 @@ services:
   web:
     build: .
     command: npm run dev
+    environment:
+      PORT: 3001
     ports:
       - "3992:3001"
     env_file:
