--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.433.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
